--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.2.1",
@@ -16,6 +18,13 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "^7.0.13",
+    "@storybook/addon-interactions": "^7.0.13",
+    "@storybook/addon-links": "^7.0.13",
+    "@storybook/blocks": "^7.0.13",
+    "@storybook/nextjs": "^7.0.13",
+    "@storybook/react": "^7.0.13",
+    "@storybook/testing-library": "^0.0.14-next.2",
     "@types/eslint": "^8.21.3",
     "@types/node": "^18.15.5",
     "@types/prettier": "^2.7.2",
@@ -26,9 +35,11 @@
     "autoprefixer": "^10.4.14",
     "eslint": "^8.36.0",
     "eslint-config-next": "^13.4.1",
+    "eslint-plugin-storybook": "^0.6.12",
     "postcss": "^8.4.21",
     "prettier": "^2.8.6",
     "prettier-plugin-tailwindcss": "^0.2.6",
+    "storybook": "^7.0.13",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.0.2"
   },
