--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.0.1",
     "@t3-oss/env-nextjs": "^0.2.1",
+    "clsx": "^1.2.1",
     "next": "^13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
