--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.0.9",
     "@radix-ui/react-slot": "^1.0.1",
     "@t3-oss/env-nextjs": "^0.2.1",
     "clsx": "^1.2.1",
