--- a/package.json
+++ b/package.json
@@ -12,39 +12,41 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.0.9",
-    "@radix-ui/react-slot": "^1.0.1",
-    "@t3-oss/env-nextjs": "^0.2.1",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@t3-oss/env-nextjs": "^0.2.2",
+    "@web3forms/react": "^1.1.3",
     "clsx": "^1.2.1",
-    "next": "^13.4.1",
+    "next": "^13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.44.2",
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^7.0.13",
-    "@storybook/addon-interactions": "^7.0.13",
-    "@storybook/addon-links": "^7.0.13",
-    "@storybook/blocks": "^7.0.13",
-    "@storybook/nextjs": "^7.0.13",
-    "@storybook/react": "^7.0.13",
-    "@storybook/testing-library": "^0.0.14-next.2",
-    "@types/eslint": "^8.21.3",
-    "@types/node": "^18.15.5",
+    "@storybook/addon-essentials": "^7.0.18",
+    "@storybook/addon-interactions": "^7.0.18",
+    "@storybook/addon-links": "^7.0.18",
+    "@storybook/blocks": "^7.0.18",
+    "@storybook/nextjs": "^7.0.18",
+    "@storybook/react": "^7.0.18",
+    "@storybook/testing-library": "0.0.14-next.2",
+    "@types/eslint": "^8.40.0",
+    "@types/node": "^18.16.16",
     "@types/prettier": "^2.7.2",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.56.0",
-    "@typescript-eslint/parser": "^5.56.0",
+    "@types/react": "^18.2.7",
+    "@types/react-dom": "^18.2.4",
+    "@typescript-eslint/eslint-plugin": "^5.59.7",
+    "@typescript-eslint/parser": "^5.59.7",
     "autoprefixer": "^10.4.14",
-    "eslint": "^8.36.0",
-    "eslint-config-next": "^13.4.1",
+    "eslint": "^8.41.0",
+    "eslint-config-next": "^13.4.4",
     "eslint-plugin-storybook": "^0.6.12",
-    "postcss": "^8.4.21",
-    "prettier": "^2.8.6",
-    "prettier-plugin-tailwindcss": "^0.2.6",
-    "storybook": "^7.0.13",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5.0.2"
+    "postcss": "^8.4.24",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.2.8",
+    "storybook": "^7.0.18",
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.0.4"
   },
   "ct3aMetadata": {
     "initVersion": "7.13.0"
